--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.15",
+    "next": "14.2.22",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.22"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
+    "daisyui": "^3.9.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
