--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.1.0",
     "@tailwindcss/typography": "^0.5.15",
     "next": "14.2.22",
     "react": "^18",
@@ -18,6 +19,7 @@
     "autoprefixer": "^10.0.1",
     "daisyui": "^3.9.4",
     "postcss": "^8",
+    "prisma": "^6.1.0",
     "tailwindcss": "^3.4.1"
   }
 }
