--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@tailwindcss/typography": "^0.5.15",
     "next": "14.2.22",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
