--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.2.22",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.5.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
